1998-04-28  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* collections.h: Add documentation tags.

	* collections.h: New protocols: MemberType, IndexSafety, Offsets, 
	ForEach.  (Collection): Include them.
	New protocols: DefaultMember, MemberBlock.
	(Array): Include them.
	New protocol: EndsOnly.
	(List): Include it.
	New protocols: DupOption, Sorted, CompareFunction, BucketFunction,
	PartiallyOrdered, PartialOrderContext, PartialOrderRelations.
	(KeyedCollection): Include them.

	* String.m: Reformatting throughout.
	
	* String.[hm]: ([String_c -appendC:]): Remove.

	* InputStream.m (readString): Use catC: instead of appendC:.

1998-04-27  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile: Remove duplicate SWARMHOME assignment.

1998-04-11  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* collections.h: Make archiver symbols extern, not common.

1997-12-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* collections.h (OutputStream, String):  Constify string arguments.

	* OutputStream.[hm]: Constify string arguments.

	* String.[hm]: Constify string arguments.

1997-11-29  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile (OBJECTS): Add InputStream.o and predicates.o.
	(install-headers): Add InputStream.h and predicates.o.
	($(INCLIB)/InputStream.h): Add.
	($(INCLIB)/predicates.h): Add.

	* collections.m (_collections_implement): Add InputStream.
	(_collections_initialize): Make customized LiteralString type.
	Define Lispish symbols generated by getExpr.

	* collections.h: Add @deftype for InputStream, and declare symbols
	that getExpr can return.

	* predicates.[hm]: New files.  Provide some convenience predicate
	functions for identifying strings and lists.

	* InputStream.[hm]: New files.  This class is introduced to read
	Lisp-like expressions into lists using the `getExpr' method.

	* collections.h: Declare [gs]etLiteralFlag methods.

	* String.m ([String_c +createBegin:]): Initialize literalFlag to zero.
	([String_c -setLiteralFlag:]): Add.